# esp32-blemesh2mqtt

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  RELEASE_PROCESS.md  build-all-targets.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3  sdkconfig.old  setup.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/workflows/: build-release.yml
documentation/: RELEASE_PROCESS.md  USER_GUIDE.md
main/: CMakeLists.txt  Kconfig.projbuild  ble_mesh.cpp  ble_mesh.h  ble_mesh_control.cpp  ble_mesh_control.h  ble_mesh_node.cpp  ble_mesh_node.h  ble_mesh_provisioning.cpp  ble_mesh_provisioning.h  debugGPIO.c  debugGPIO.cpp  debugGPIO.h  debugUART.c  debugUART.h  debug_console_common.h  idf_component.yml  main.c  main.cpp  modelsConfig.cpp  modelsConfig.h  mqtt_control.cpp  mqtt_control.h  nodesManager.cpp  nodesManager.h  provisioning.cpp  provisioning.h
main/ble_mesh/: Uui128.h  ble_mesh_commands.cpp  ble_mesh_commands.h  ble_mesh_control.cpp  ble_mesh_control.h  ble_mesh_node.cpp  ble_mesh_node.h  ble_mesh_provisioning.cpp  ble_mesh_provisioning.h  device_uuid128.h  message_queue.cpp  message_queue.h
main/common/: log_common.h  version.h
main/debug/: console_cmd.cpp  console_cmd.h  debugGPIO.cpp  debug_commands_registry.cpp  debug_commands_registry.h  websocket_logger.cpp  websocket_logger.h
main/littlefs/: index.html  setup.html
main/littlefs/css/: style.css
main/littlefs/js/: main.js
main/mqtt/: mqtt_bridge.cpp  mqtt_bridge.h  mqtt_control.cpp  mqtt_control.h  mqtt_credentials.cpp  mqtt_credentials.h
main/offline_resources/: company_identifiers.yaml  company_test_demo.cpp  generate_company_binary.py  generate_company_map.py  generate_model_map.py  mesh_model_uuids.yaml  mmdl_model_uuids.yaml  test_company_lookup.py
main/ota/: ota_manager.cpp  ota_manager.h
main/security/: credential_encryption.cpp  credential_encryption.h
main/sig_companies/: README.md  company_map.cpp  company_map.h
main/sig_models/: model_map.cpp  model_map.h
main/web_server/: web_server.cpp  web_server.h
main/wifi/: dns_server.cpp  dns_server.h  wifiStation.cpp  wifi_commands.cpp  wifi_commands.h  wifi_provisioning.cpp  wifi_provisioning.h  wifi_station.cpp  wifi_station.h
partition_table/: partitionTable.csv
partitions/: single-ota.csv
